# mygit

./: .gitignore  CMakeLists.txt  DbOperations.c  DbOperations.h  LICENSE  README.MD  RequestHandlers.c  RequestHandlers.h  database.db  main.c  old.c  todo.txt
libs/parson/: parson.c  parson.h
source/client/: CommandHandlers.c  CommandHandlers.h  Commands.c  Commands.h  ResponseHandlers.c  ResponseHandlers.h  main.c  oldtestmain.c
source/common/: Macros.h  Transfer.c  Transfer.h  Utils.c  Utils.h
source/server/: DatabaseInteraction.c  DatabaseInteraction.h  DbOperations.c  DbOperations.h  RequestHandlers.c  RequestHandlers.h  Requests.c  Requests.h  main.c
